--- a/instant_articles_html/watch_now_styles.css
+++ b/instant_articles_html/watch_now_styles.css
@@ -360,3 +360,25 @@ a {
     height: 16px;
     max-width: 100%;
 }
+
+.more-content {
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 0;
+    padding-bottom: 20px;
+}
+
+.more-content .more-link {
+    text-decoration: none;
+    min-width: auto;
+    margin-top: 20px;
+    border: 2px solid #000;
+    padding: 8px 20px;
+    color: #000;
+    font-size: 1.2rem;
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+}
