Updating Changes to the Git Repo , may be default msg

--- a/usmap_banner/usmap/app/scss/_us_election_varaibles.scss
+++ b/usmap_banner/usmap/app/scss/_us_election_varaibles.scss
@@ -3,7 +3,7 @@
 $sna_usem_result_bar_state_bg_color: #E2E2E2;
 
 $sna_usem_result_bar_in_progress_bg_color: #d3d3d3;
-$sna_usem_result_bar_in_progress_active_bg_color: #EBEBEB;
+$sna_usem_result_bar_in_progress_active_bg_color: #898989;
 
 $sna_usem_result_bar_dem_bg_color: #333399;
 $sna_usem_result_bar_dem_active_bg_color: #6666cc;
