--- a/usmap_banner/usmap/app/scss/app_web.scss
+++ b/usmap_banner/usmap/app/scss/app_web.scss
@@ -59,7 +59,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background: red;
+    // background: red;
 }
 .sna_us_map_video_blur_backdrop{
     position: absolute;
