--- a/usmap_banner/usmap/app/scss/_us_election_varaibles.scss
+++ b/usmap_banner/usmap/app/scss/_us_election_varaibles.scss
@@ -58,3 +58,7 @@ $legend_height_desktop: 30px;
 
 
 /*END:Legends */
+
+
+$sna_usem_result_bar_font_size_state: 52px;
+$sna_usem_result_bar_font_size_result_bar: 52px;
