--- a/usmap_banner/usmap/app/scss/app_web.scss
+++ b/usmap_banner/usmap/app/scss/app_web.scss
@@ -74,3 +74,13 @@
     max-width: 1650px;
     margin: 0 auto;
 }
+
+body.map_var_1{
+    margin-bottom: 75px;
+    margin-top: 75px;
+}
+
+html{
+    background-color: #f5f8f8;
+}
+
