--- a/instant_articles_html/breaking_news_styles.css
+++ b/instant_articles_html/breaking_news_styles.css
@@ -1,148 +1,219 @@
-body, input {
-    font-family: "HelveticaNeueReg";
-}
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: middle;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
+/* the below css are minified using the online tool https://cssminifier.com/ and put in breaking_new_styles_min_for_prod.css then copied to fbInstantArticle.ftl */
+*,
 body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: "";
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    box-sizing: border-box;
 }
 
+body,
+input {
+    font-family: HelveticaNeueReg;
+}
+
+a,
+abbr,
+acronym,
+address,
+applet,
+article,
+aside,
+audio,
+b,
+big,
+blockquote,
+body,
+canvas,
+caption,
+center,
+cite,
+code,
+dd,
+del,
+details,
+dfn,
+div,
+dl,
+dt,
+em,
+embed,
+fieldset,
+figcaption,
+figure,
+footer,
+form,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+header,
+hgroup,
+html,
+i,
+iframe,
+img,
+ins,
+kbd,
+label,
+legend,
+li,
+mark,
+menu,
+nav,
+object,
+ol,
+output,
+p,
+pre,
+q,
+ruby,
+s,
+samp,
+section,
+small,
+span,
+strike,
+strong,
+sub,
+summary,
+sup,
+table,
+tbody,
+td,
+tfoot,
+th,
+thead,
+time,
+tr,
+tt,
+u,
+ul,
+var,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font: inherit;
+    vertical-align: middle;
+}
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
+}
+
+ol,
+ul {
+    list-style: none;
+}
+
+blockquote,
+q {
+    quotes: none;
+}
+
+blockquote:after,
+blockquote:before,
+q:after,
+q:before {
+    content: "";
+    content: none;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
 
 img {
     color: transparent;
 }
 
-
 @font-face {
-    font-family: "HelveticaNeueBold";
-    src:    url("https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueW23forSKY-Bd_T02.eot?#iefix") format("embedded-opentype"),
-            url("https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueMEforSKYW21-Bd_web.woff2") format("woff2"),
-            url("https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueMEforSKYW21-Bd_web.woff") format("woff"),
-            url("https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueMEforSKYW21-Bd_web.ttf") format("truetype"),
-            url("https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueW23forSKY-Bd_T02.svg#HelveticaNeueW23forSKY-Bd_T02") format("svg");
+    font-family: HelveticaNeueBold;
+    src: url(https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueW23forSKY-Bd_T02.eot?#iefix) format("embedded-opentype"), url(https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueMEforSKYW21-Bd_web.woff2) format("woff2"), url(https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueMEforSKYW21-Bd_web.woff) format("woff"), url(https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueMEforSKYW21-Bd_web.ttf) format("truetype"), url(https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueW23forSKY-Bd_T02.svg#HelveticaNeueW23forSKY-Bd_T02) format("svg");
     font-weight: 800;
     font-style: normal;
 }
 
 @font-face {
-    font-family: "HelveticaNeueReg";
-    src:    url("https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueW23forSKY-Reg_T02.eot?#iefix") format("embedded-opentype"),
-            url("https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueMEforSKYW21-Rg_web.woff2") format("woff2"),
-            url("https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueMEforSKYW21-Rg_web.woff") format("woff"),
-            url("https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueMEforSKYW21-Rg_web.ttf") format("truetype"),
-            url("https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueW23forSKY-Reg_T02.svg#HelveticaNeueW23forSKY-Reg_T02") format("svg");
+    font-family: HelveticaNeueReg;
+    src: url(https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueW23forSKY-Reg_T02.eot?#iefix) format("embedded-opentype"), url(https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueMEforSKYW21-Rg_web.woff2) format("woff2"), url(https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueMEforSKYW21-Rg_web.woff) format("woff"), url(https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueMEforSKYW21-Rg_web.ttf) format("truetype"), url(https://www.skynewsarabia.com/static/web-rev/styles/sna-font/HelveticaNeueW23forSKY-Reg_T02.svg#HelveticaNeueW23forSKY-Reg_T02) format("svg");
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
-    font-family: "sna-icons";
-    src:    url("https://www.skynewsarabia.com/static/web-rev/styles/sna-icons/snaicons.eot");
-    src:    url("https://www.skynewsarabia.com/static/web-rev/styles/sna-icons/snaicons.eot?#iefix") format("embedded-opentype"),
-            url("https://www.skynewsarabia.com/static/web-rev/styles/sna-icons/snaicons.woff2") format("woff2"),
-            url("https://www.skynewsarabia.com/static/web-rev/styles/sna-icons/snaicons.woff") format("woff"),
-            url("https://www.skynewsarabia.com/static/web-rev/styles/sna-icons/snaicons.ttf") format("truetype"),
-            url("https://www.skynewsarabia.com/static/web-rev/styles/sna-icons/snaicons.svg#snaicons") format("svg");
+    font-family: sna-icons;
+    src: url(https://www.skynewsarabia.com/static/web-rev/styles/sna-icons/snaicons.eot);
+    src: url(https://www.skynewsarabia.com/static/web-rev/styles/sna-icons/snaicons.eot?#iefix) format("embedded-opentype"), url(https://www.skynewsarabia.com/static/web-rev/styles/sna-icons/snaicons.woff2) format("woff2"), url(https://www.skynewsarabia.com/static/web-rev/styles/sna-icons/snaicons.woff) format("woff"), url(https://www.skynewsarabia.com/static/web-rev/styles/sna-icons/snaicons.ttf) format("truetype"), url(https://www.skynewsarabia.com/static/web-rev/styles/sna-icons/snaicons.svg#snaicons) format("svg");
     font-weight: 400;
     font-style: normal;
 }
+
 body {
-    box-sizing: border-box;
     line-height: 1.5;
-    font-family: "HelveticaNeueReg";
-}
-*{
-	box-sizing: border-box;
-}
-.article-widget-holder{
-	margin-top: 0;
-	padding-left: 0;
-	padding-right: 0;
-	margin-right: 10px;
-	margin-left: 10px;
+    font-family: HelveticaNeueReg;
 }
 
-.breaking_news_widget{
+.article-widget-holder {
+    margin-top: 0;
+    padding-left: 0;
+    padding-right: 0;
+    margin-right: 10px;
+    margin-left: 10px;
+}
 
+
+
+.sna_title_1 {
+    font-size: 22px;
+    min-height: 35px;
+    line-height: 35px;
+    font-family: HelveticaNeueBold;
+    margin-bottom: 10px;
+    position: relative;
+}
+
+.sna_title_1.breaking {
+    color: #f8eb20;
+    background: #232323;
+    padding: 0 10px;
     border-bottom: 1px solid #c5c5c5;
-    border-left: 1px solid #c5c5c5;
-    border-right: 1px solid #c5c5c5;
 }
-.sna_title_1{
-	font-size: 22px;
-	min-height: 35px;
-	line-height: 35px;
-	font-family: HelveticaNeueBold;
-	margin-bottom: 10px;
-	position: relative;
-}
-.sna_title_1.breaking{
-	color: #fedf00;
-	background: #000000;
-	padding: 0px 10px 0px 10px;
-	border-bottom: 1px solid #c5c5c5;
-}
+
 .sna_title_1:before {
     content: " ";
-    top: 0;
-    right: 0;
+    top: 50%;
+    right: 10px;
     display: block;
     position: absolute;
-    background-clip: content-box;
-    width: 8px;
-    height: 100%;
-    background: #a20000;
-}
-.sna_title_1.breaking:before {
-    background: #979797;
+    width: 6px;
+    height: calc(100% - 8px);
+    background: #be2f21;
+    transform: translateY(-50%);
 }
 
+.sna_title_1.breaking:before {
+    background: #f8eb20;
+}
 
 .sna_title_1 .sna_title_1_text {
     position: relative;
     z-index: 1;
     padding-left: 10px;
-    padding-right: 10px;
+    padding-right: 20px;
 }
+
 .more-content {
     text-align: center;
     margin-top: 10px;
@@ -153,18 +224,17 @@ body {
 .more-content .more-link {
     text-decoration: none;
     min-width: auto;
-    margin-top: 20px;
     border: 2px solid #000;
     padding: 8px 20px;
     color: #000;
     font-size: 1.2rem;
     margin: 0;
+    border-radius: 7px;
 }
 
 a {
     text-decoration: none;
 }
-
 
 .breaking_news_cont {
     text-align: right;
@@ -174,25 +244,24 @@ a {
     border-bottom: 0;
 }
 
-
 .breaking_news_cont .breaking_news_list_item {
     padding-bottom: 10px;
     position: relative;
 }
 
 .breaking_news_cont .breaking_news_list_item .breaking_news_list_item_date {
-    background: #d8d8d8;
-    color: #fedf00;
+    background: #232323;
+    color: #f8eb20;
 }
 
 .breaking_news_cont .breaking_news_list_item .breaking_news_list_item_date .breaking_news_list_item_date_content {
     display: inline-block;
     background: #000;
-    padding: 0px 18px 1px 10px;
+    padding: 0 18px 1px 10px;
 }
 
 .content_list_item_date_icon {
-    font-family: "sna-icons";
+    font-family: sna-icons;
     display: inline-block;
 }
 
@@ -201,17 +270,22 @@ body i {
 }
 
 .breaking_news_cont .breaking_news_list_item .breaking_news_list_item_message {
-    background: #f9f9f9;
+    background: #dde1ec;
     padding: 10px 18px 10px 10px;
 }
 
+.breaking_news_list_item_date.breaking_now+.breaking_news_list_item_message {
+    background-color: #f8eb20;
+}
+
 .breaking_news_cont .breaking_news_list_item .breaking_news_list_item_message.breaking_news_list_item_link {
-    padding-bottom: 40px;
+    padding-bottom: 45px;
     cursor: pointer !important;
     text-decoration: none !important;
     color: #000 !important;
     display: block !important;
 }
+
 .breaking_news_cont .breaking_news_list_item .breaking_news_list_item_message.breaking_news_list_item_link .breaking_news_list_item_message_link_wrap {
     position: absolute;
     left: 10px;
@@ -219,13 +293,15 @@ body i {
     text-align: left;
     display: inline-block;
 }
+
 .breaking_news_cont .breaking_news_list_item .breaking_news_list_item_message.breaking_news_list_item_link .breaking_news_list_item_message_link_wrap .breaking_news_list_item_message_link {
-    color: #fedf00;
-    background: #000000;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-bottom: 4px;
-    bottom: 2px;
-    left: 15px;
-    margin-right: 10px;
+   color: #f8eb20;
+   background-color: #232323;
+   padding: 5px 10px;
+   margin-right: 10px;
+   box-shadow: 0 0 2px 0 rgba(0,0,0,.15);
+}
+
+.breaking_news_list_item_date_content.now span {
+    font-size: 18px;
 }
