added third variety for maps

--- a/usmap_banner/usmap/app/scss/app_web.scss
+++ b/usmap_banner/usmap/app/scss/app_web.scss
@@ -76,10 +76,13 @@
 }
 
 body.map_var_1{
-    margin-bottom: 75px;
-    margin-top: 75px;
+    padding-bottom: 75px;
+    // margin-top: 75px;
 }
-
+body.map_var_2{
+    padding-bottom: 282px;
+    padding-top: 97px;
+}
 html{
     background-color: #f5f8f8;
 }
