added third variety for maps

--- a/usmap_banner/usmap/app/scss/app_web.scss
+++ b/usmap_banner/usmap/app/scss/app_web.scss
@@ -74,7 +74,9 @@
     max-width: 1650px;
     margin: 0 auto;
 }
-
+body{
+    padding-bottom: 75px;
+}
 body.map_var_1{
     padding-bottom: 75px;
     // margin-top: 75px;
